saves/test/demo_full_20240802_193545/rule110/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp rule110_tb.v rule110.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
rule110_tb.v:105: $finish called at 370000 (1ps)

iverilog cmd 2 error:

